images takes too much RAM for plotting latents atm

--- a/notebooks/Deploy-Unity.ipynb
+++ b/notebooks/Deploy-Unity.ipynb
@@ -671,15 +671,55 @@
     "    '''\n",
     "    Get the right format and flatte - remeber all these are global variables implicitly updated by the subscriber\n",
     "    '''\n",
-    "\n",
-    "    o = full_state\n",
-    "    \n",
     "    if args.images:\n",
-    "        img_embedding = cnn(tf.expand_dims(ros_shoulder_image, 0))\n",
+    "        img_embedding = cnn(shoulder_image[np.newaxis,:])\n",
     "        o = tf.squeeze(tf.concat([img_embedding, proprioceptive_state],axis=1))\n",
     "        if args.gripper_images:\n",
-    "            gripper_embedding = \n",
-    "    return o\n"
+    "            gripper_embedding = cnn(gripper_image[np.newaxis,:])\n",
+    "            o = tf.squeeze(tf.concat([o, gripper_embedding],axis=1))\n",
+    "    else:\n",
+    "        o = full_state\n",
+    "    return o\n",
+    "\n",
+    "\n",
+    "\n",
+    "def choose_action(actor, o, z, goal, states=None, a_pred=None, a_true=None, replay=False, t = 0):\n",
+    "\n",
+    "    a,_,state = actor((o, z,goal))\n",
+    "        \n",
+    "    a = a.sample().numpy().squeeze()\n",
+    "\n",
+    "    if a_pred is not None:\n",
+    "        a_pred.append(a)\n",
+    "\n",
+    "    if replay: \n",
+    "        a=a_true[t, :] \n",
+    "    return a\n",
+    "\n",
+    "\n",
+    "def reset_to()\n",
+    "    # To reset, we'll call reset\n",
+    "\n",
+    "    # Then call get state serv twice to make sure we have the latest info\n",
+    "\n",
+    "   # update the obs in here, if they get updated again - woo!\n",
+    "\n",
+    "\n",
+    "def replan(actor, plans)\n",
+    "\n",
+    "        if isinstance(goal, dict):\n",
+    "            # a function which remakes the goal so pertubations of other objects don't matter, letting us specify only what we want different from the rest of the env at the time we took the goal\n",
+    "            g = goal['func'](*goal['args'])\n",
+    "        else:\n",
+    "            g = goal\n",
+    "\n",
+    "        plan = planner((o[0], g[0]))\n",
+    "        z = tf.expand_dims(plan.sample(),0)\n",
+    "        plans.append(z.numpy())\n",
+    "        actor.reset_states()\n",
+    "        return plan, g\n",
+    "\n",
+    "    "
    ]
   },
   {
@@ -690,12 +730,31 @@
    "source": [
     "# Step 2, control loop - loop until we have new information, then act! Check for new info at 100\n",
     "\n",
-    "# To reset, we'll call reset\n",
     "\n",
-    "# Then call get state serv twice to make sure we have the latest info\n",
-    "\n",
-    "# Then we'll call reset again, and immediately start as for some reason this works better\n",
-    "while not rospy.is_shutdown() and i < 1000:"
+    "def rollout_subseq(goal, retries=1, replan_horizon=30, a_true=None, replay=False)\n",
+    "    t = 0\n",
+    "    a_pred = []\n",
+    "    states = []\n",
+    "    plans = []\n",
+    "    \n",
+    "    #\n",
+    "    reset_to()\n",
+    "    \n",
+    "    plan,g = replan(goal)\n",
+    "    \n",
+    "    if replay:\n",
+    "        total_steps = len(a_true)\n",
+    "    else:\n",
+    "        total_steps = retries*replan_horizon\n",
+    "    \n",
+    "    while not rospy.is_shutdown() and t < total_steps:\n",
+    "        if t % replan_horizon == 0:\n",
+    "            plan,g = replan(goal)\n",
+    "            \n",
+    "        a = choose_action(actor, o, z, g, states, a_pred, a_true, replay, t)\n",
+    "        \n",
+    "        \n",
+    "    "
    ]
   },
   {
@@ -712,21 +771,6 @@
    "outputs": [],
    "source": [
     "\n",
-    "\n",
-    "def choose_action(actor, o, z, goal, states=None, a_pred=None, a_true=None, replay=False, i = -0):\n",
-    "\n",
-    "    a,_,state = actor((o, z,goal))\n",
-    "        \n",
-    "    a = a.sample().numpy().squeeze()\n",
-    "\n",
-    "    if states is not None:\n",
-    "        states.append(state)\n",
-    "    if a_pred is not None:\n",
-    "        a_pred.append(a)\n",
-    "\n",
-    "    if replay: \n",
-    "        a=a_true[i, :] \n",
-    "    return a\n",
     "\n",
     "def rollout_subseq(goal,retries=1, replan_horizon=30, a_true=None, o_true=None, traj_len=None, replay=False,end_on_success = False, record_dir=None, reset_goal=True):\n",
     "    \n",
