--- a/notebooks/Deploy-Unity.ipynb
+++ b/notebooks/Deploy-Unity.ipynb
@@ -693,6 +693,22 @@
     "            return\n",
     "        r.sleep() # ros sleep for a little while before checking convergence again\n",
     "        \n",
+    "def reset_to(arm, ag, prev_act = np.zeros(7)):\n",
+    "    \n",
+    "    arm_msg, ag_msg = proprio_rpy_to_ROSmsg(arm), ag_to_ROSmsg(ag)\n",
+    "    # Get IK for actual position\n",
+    "    prev_act = JointPositions()\n",
+    "    \n",
+    "    # Package into ResetInfo\n",
+    "    for i in range(0,2):\n",
+    "        joints = IK(arm_msg, prev_act).joints # once to align it with the prev acts\n",
+    "        r = ResetInfo(joints, ag, Velocities())\n",
+    "        # Send down\n",
+    "        env_reset_pub.publish(r)\n",
+    "    converge_on_reset(arm, ag, threshold = 0.05)\n",
+    "    env_reEngage_collision_pub.publish(Reengage())\n",
+    "    process_observation_srv()\n",
+    "    \n",
     "# Updates the globals, but in a blocking way so we can confirm we have the latest\n",
     "def process_observation_srv(): \n",
     "    process_observation(getStateServ(int(1)).state)\n",
@@ -756,14 +772,6 @@
     "    return a\n",
     "\n",
     "\n",
-    "def reset_to()\n",
-    "    # To reset, we'll call reset\n",
-    "\n",
-    "    # Then call get state serv twice to make sure we have the latest info\n",
-    "\n",
-    "   # update the obs in here, if they get updated again - woo!\n",
-    "\n",
-    "\n",
     "def replan(actor, plans)\n",
     "\n",
     "        if isinstance(goal, dict):\n",
@@ -771,6 +779,10 @@
     "            g = goal['func'](*goal['args'])\n",
     "        else:\n",
     "            g = goal\n",
+    "            \n",
+    "        if args.images:\n",
+    "            if args.use_langauge and len(goal.shape) != 3: # i.e it is a sentence embeedding not \n",
+    "            \n",
     "\n",
     "        plan = planner((o[0], g[0]))\n",
     "        z = tf.expand_dims(plan.sample(),0)\n",
@@ -790,14 +802,14 @@
     "# Step 2, control loop - loop until we have new information, then act! Check for new info at 100\n",
     "# Potentially include success func?\n",
     "\n",
-    "def rollout_subseq(goal, retries=1, replan_horizon=30, a_true=None, replay=False)\n",
+    "def rollout_subseq(goal, retries=1, replan_horizon=30, a_true=None, replay=False, reset_state=None)\n",
     "    t = 0\n",
     "    a_pred = []\n",
     "    o_observed = []\n",
     "    plans = []\n",
     "    \n",
-    "    #\n",
-    "    reset_to()\n",
+    "    if reset_state is not None:\n",
+    "        reset_to(reset_state['proprioceptive'], reset_state['achieved'])\n",
     "    \n",
     "    z,g = replan(goal)\n",
     "    \n",
@@ -819,6 +831,74 @@
     "        \n",
     "    return np.array(a_true), np.array(a_pred), o_true, np.squeeze(np.array(o_observed)), plans\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Test against trajectories from the batch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['obs', 'acts', 'goals', 'seq_lens', 'masks', 'imgs', 'gripper_imgs', 'goal_imgs', 'proprioceptive_features', 'labels', 'label_embeddings', 'tags'])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lang_batch = labelled_ds.next()\n",
+    "lang_batch.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(12,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "idx = 0\n",
+    "reset_state = {'proprioceptive':lang_batch['proprioceptive_features'][idx][0], 'achieved':lang_batch['obs'][idx,0,7:]}\n",
+    "goal =  lang_batch['goal_imgs'][idx] if args.images else lang_batch['goals'][idx, 0] # either H,W,C or D\n",
+    "print(goal.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TensorShape([128, 128, 3])"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lang_batch['goal_imgs'][idx].shape"
    ]
   },
   {
