deploy unity works yay

--- a/notebooks/Creating tf_records.ipynb
+++ b/notebooks/Creating tf_records.ipynb
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -641,7 +641,10 @@
     "model = hub.load(module_url)\n",
     "print (\"module %s loaded\" % module_url)\n",
     "def embed(input):\n",
-    "  return model(input)"
+    "  return model(input)\n",
+    "\n",
+    "\n",
+    "embed = hub.KerasLayer(str(STORAGE_PATH)+'/saved_models/universal_sentence_encoder')"
    ]
   },
   {
@@ -651,7 +654,6 @@
    "outputs": [],
    "source": [
     "\n",
-    "embed = hub.KerasLayer(str(STORAGE_PATH)+'/saved_models/universal_sentence_encoder')\n",
     "# embeddings = embed([\"A long sentence.\", \"single-word\", \"http://example.com\"])\n",
     "# print(embeddings.shape, embeddings.dtype)"
    ]
@@ -666,11 +668,222 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'indices': {'traj': 0, 'start': 8069, 'end': 8104},\n",
+       "  'label': 'pick up the block',\n",
+       "  'tag': 'block'},\n",
+       " {'indices': {'traj': 0, 'start': 4753, 'end': 4790},\n",
+       "  'label': 'move the block left',\n",
+       "  'tag': 'block'},\n",
+       " {'indices': {'traj': 0, 'start': 7177, 'end': 7216},\n",
+       "  'label': 'press the green button',\n",
+       "  'tag': 'button'},\n",
+       " {'indices': {'traj': 0, 'start': 2770, 'end': 2805},\n",
+       "  'label': 'push the cupboard door left',\n",
+       "  'tag': 'cupboard door left'},\n",
+       " {'indices': {'traj': 0, 'start': 6200, 'end': 6236},\n",
+       "  'label': 'move the block left but upright',\n",
+       "  'tag': 'block'},\n",
+       " {'indices': {'traj': 0, 'start': 8047, 'end': 8087},\n",
+       "  'label': 'open the drawer',\n",
+       "  'tag': 'drawer out'},\n",
+       " {'indices': {'traj': 0, 'start': 6182, 'end': 6221},\n",
+       "  'label': 'stand the block up',\n",
+       "  'tag': 'block'},\n",
+       " {'indices': {'traj': 0, 'start': 7960, 'end': 7997},\n",
+       "  'label': 'close the drawer',\n",
+       "  'tag': 'drawer in'},\n",
+       " {'indices': {'traj': 0, 'start': 2626, 'end': 2666},\n",
+       "  'label': 'push the drawer closed',\n",
+       "  'tag': 'drawer in'},\n",
+       " {'indices': {'traj': 0, 'start': 7612, 'end': 7649},\n",
+       "  'label': 'open the drawer with a closed hand',\n",
+       "  'tag': 'drawer out'},\n",
+       " {'indices': {'traj': 0, 'start': 9328, 'end': 9365},\n",
+       "  'label': 'stand up blue block',\n",
+       "  'tag': 'block'},\n",
+       " {'indices': {'traj': 0, 'start': 7020, 'end': 7057},\n",
+       "  'label': 'open the door to the right',\n",
+       "  'tag': 'cupboard door right'},\n",
+       " {'indices': {'traj': 0, 'start': 6865, 'end': 6902},\n",
+       "  'label': 'pick and place the block left',\n",
+       "  'tag': 'block'},\n",
+       " {'indices': {'traj': 0, 'start': 8204, 'end': 8239},\n",
+       "  'label': 'get to the block in the cupboard',\n",
+       "  'tag': 'block in/out cupboard'},\n",
+       " {'indices': {'traj': 0, 'start': 3439, 'end': 3478},\n",
+       "  'label': 'press the red button',\n",
+       "  'tag': 'button'},\n",
+       " {'indices': {'traj': 0, 'start': 6834, 'end': 6869},\n",
+       "  'label': 'open the door to the left',\n",
+       "  'tag': 'cupboard door left'},\n",
+       " {'indices': {'traj': 0, 'start': 3880, 'end': 3917},\n",
+       "  'label': 'drawer in ',\n",
+       "  'tag': 'drawer in'},\n",
+       " {'indices': {'traj': 0, 'start': 9095, 'end': 9135},\n",
+       "  'label': 'push the drawer closed',\n",
+       "  'tag': 'drawer in'},\n",
+       " {'indices': {'traj': 0, 'start': 4205, 'end': 4240},\n",
+       "  'label': 'roll the block left',\n",
+       "  'tag': 'block'},\n",
+       " {'indices': {'traj': 0, 'start': 1948, 'end': 1986},\n",
+       "  'label': 'push the drawer closed',\n",
+       "  'tag': 'drawer in'},\n",
+       " {'indices': {'traj': 0, 'start': 8172, 'end': 8212},\n",
+       "  'label': 'open the cupboard door left',\n",
+       "  'tag': 'cupboard door left'},\n",
+       " {'indices': {'traj': 0, 'start': 588, 'end': 626},\n",
+       "  'label': 'press the blue button',\n",
+       "  'tag': 'button'},\n",
+       " {'indices': {'traj': 0, 'start': 8451, 'end': 8488},\n",
+       "  'label': 'push the block into the cupboard',\n",
+       "  'tag': 'block in/out cupboard'},\n",
+       " {'indices': {'traj': 0, 'start': 383, 'end': 420},\n",
+       "  'label': 'close drawer',\n",
+       "  'tag': 'drawer in'},\n",
+       " {'indices': {'traj': 0, 'start': 9165, 'end': 9202},\n",
+       "  'label': 'push the drawer nearly closed',\n",
+       "  'tag': 'drawer in'},\n",
+       " {'indices': {'traj': 0, 'start': 4231, 'end': 4269},\n",
+       "  'label': 'rotate the block to the left',\n",
+       "  'tag': 'block'},\n",
+       " {'indices': {'traj': 0, 'start': 8120, 'end': 8159},\n",
+       "  'label': 'put the block in the cupboard',\n",
+       "  'tag': 'block in/out cupboard'},\n",
+       " {'indices': {'traj': 0, 'start': 8222, 'end': 8260},\n",
+       "  'label': 'pull the block out of the cupboard',\n",
+       "  'tag': 'block in/out cupboard'},\n",
+       " {'indices': {'traj': 0, 'start': 4235, 'end': 4272},\n",
+       "  'label': 'twist the block to the left',\n",
+       "  'tag': 'block'},\n",
+       " {'indices': {'traj': 0, 'start': 3338, 'end': 3376},\n",
+       "  'label': 'grab the block in the drawer',\n",
+       "  'tag': 'block in/out drawer'},\n",
+       " {'indices': {'traj': 0, 'start': 7118, 'end': 7154},\n",
+       "  'label': 'cupboard door left',\n",
+       "  'tag': 'cupboard door left'},\n",
+       " {'indices': {'traj': 0, 'start': 5641, 'end': 5680},\n",
+       "  'label': 'grasp the block in the drawer',\n",
+       "  'tag': 'block in/out drawer'},\n",
+       " {'indices': {'traj': 0, 'start': 2411, 'end': 2450},\n",
+       "  'label': 'roll the block left',\n",
+       "  'tag': 'block'},\n",
+       " {'indices': {'traj': 0, 'start': 3132, 'end': 3170},\n",
+       "  'label': 'open the drawer',\n",
+       "  'tag': 'drawer out'},\n",
+       " {'indices': {'traj': 0, 'start': 8255, 'end': 8295},\n",
+       "  'label': 'pull the block from the cupboard to the buttons',\n",
+       "  'tag': 'block in/out cupboard'},\n",
+       " {'indices': {'traj': 0, 'start': 8684, 'end': 8719},\n",
+       "  'label': 'push the drawer closed',\n",
+       "  'tag': 'drawer in'},\n",
+       " {'indices': {'traj': 0, 'start': 1808, 'end': 1845},\n",
+       "  'label': 'stand up block',\n",
+       "  'tag': 'block'},\n",
+       " {'indices': {'traj': 0, 'start': 857, 'end': 895},\n",
+       "  'label': 'press the green button',\n",
+       "  'tag': 'button'},\n",
+       " {'indices': {'traj': 0, 'start': 3650, 'end': 3690},\n",
+       "  'label': 'close the cupboard to the right',\n",
+       "  'tag': 'cupboard door right'},\n",
+       " {'indices': {'traj': 0, 'start': 1455, 'end': 1495},\n",
+       "  'label': 'open the right side of the cupboard',\n",
+       "  'tag': 'cupboard door left'},\n",
+       " {'indices': {'traj': 0, 'start': 2916, 'end': 2951},\n",
+       "  'label': 'open the left side of the cupboard',\n",
+       "  'tag': 'cupboard door right'},\n",
+       " {'indices': {'traj': 0, 'start': 8798, 'end': 8833},\n",
+       "  'label': 'get the block from the drawer',\n",
+       "  'tag': 'block in/out drawer'},\n",
+       " {'indices': {'traj': 0, 'start': 8754, 'end': 8790},\n",
+       "  'label': 'open drawer',\n",
+       "  'tag': 'drawer out'},\n",
+       " {'indices': {'traj': 0, 'start': 9275, 'end': 9314},\n",
+       "  'label': 'rotate the block right',\n",
+       "  'tag': 'block'},\n",
+       " {'indices': {'traj': 0, 'start': 5464, 'end': 5503},\n",
+       "  'label': 'close the drawer with an open hand',\n",
+       "  'tag': 'drawer in'},\n",
+       " {'indices': {'traj': 0, 'start': 1711, 'end': 1751},\n",
+       "  'label': 'press the red button',\n",
+       "  'tag': 'button'},\n",
+       " {'indices': {'traj': 0, 'start': 1334, 'end': 1369},\n",
+       "  'label': 'rotate the block left',\n",
+       "  'tag': 'block'},\n",
+       " {'indices': {'traj': 0, 'start': 6569, 'end': 6605},\n",
+       "  'label': 'close the left side of the cupboard',\n",
+       "  'tag': 'cupboard door left'},\n",
+       " {'indices': {'traj': 0, 'start': 6987, 'end': 7022},\n",
+       "  'label': 'close the drawer',\n",
+       "  'tag': 'drawer in'},\n",
+       " {'indices': {'traj': 0, 'start': 8835, 'end': 8874},\n",
+       "  'label': 'press green button',\n",
+       "  'tag': 'button'},\n",
+       " {'indices': {'traj': 0, 'start': 3683, 'end': 3722},\n",
+       "  'label': 'reorient the block upright',\n",
+       "  'tag': 'block'},\n",
+       " {'indices': {'traj': 0, 'start': 277, 'end': 313},\n",
+       "  'label': 'rotate the block right',\n",
+       "  'tag': 'block'},\n",
+       " {'indices': {'traj': 0, 'start': 3095, 'end': 3132},\n",
+       "  'label': 'press the green button',\n",
+       "  'tag': 'button'},\n",
+       " {'indices': {'traj': 0, 'start': 9099, 'end': 9137},\n",
+       "  'label': 'close the drawer with an open gripper',\n",
+       "  'tag': 'drawer in'},\n",
+       " {'indices': {'traj': 0, 'start': 8795, 'end': 8835},\n",
+       "  'label': 'lift the block out of the drawer',\n",
+       "  'tag': 'block in/out drawer'},\n",
+       " {'indices': {'traj': 0, 'start': 381, 'end': 417},\n",
+       "  'label': 'close the drawer',\n",
+       "  'tag': 'drawer in'},\n",
+       " {'indices': {'traj': 0, 'start': 4502, 'end': 4538},\n",
+       "  'label': 'roll the block right',\n",
+       "  'tag': 'block'},\n",
+       " {'indices': {'traj': 0, 'start': 8544, 'end': 8581},\n",
+       "  'label': 'finish opening the drawer',\n",
+       "  'tag': 'drawer out'},\n",
+       " {'indices': {'traj': 0, 'start': 9476, 'end': 9513},\n",
+       "  'label': 'roll the block toward you',\n",
+       "  'tag': 'block'},\n",
+       " {'indices': {'traj': 0, 'start': 614, 'end': 651},\n",
+       "  'label': 'open the drawer',\n",
+       "  'tag': 'drawer out'},\n",
+       " {'indices': {'traj': 0, 'start': 8447, 'end': 8487},\n",
+       "  'label': 'push the blue block into the left side of the cupboard',\n",
+       "  'tag': 'block in/out cupboard'},\n",
+       " {'indices': {'traj': 0, 'start': 7052, 'end': 7090},\n",
+       "  'label': 'push the button on the right',\n",
+       "  'tag': 'button'},\n",
+       " {'indices': {'traj': 0, 'start': 442, 'end': 481},\n",
+       "  'label': 'toggle the cupboard left',\n",
+       "  'tag': 'cupboard door left'},\n",
+       " {'indices': {'traj': 0, 'start': 1992, 'end': 2032},\n",
+       "  'label': 'open the drawer',\n",
+       "  'tag': 'drawer out'},\n",
+       " {'indices': {'traj': 0, 'start': 2855, 'end': 2895},\n",
+       "  'label': 'push the block into the right side of the cupboard',\n",
+       "  'tag': 'block in/out cupboard'},\n",
+       " {'indices': {'traj': 0, 'start': 9636, 'end': 9671},\n",
+       "  'label': 'cupboard door left',\n",
+       "  'tag': 'cupboard door left'}]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "indices_and_labels = list(np.load(path/f'{filename}.npz', allow_pickle=True)['labels'])"
+    "indices_and_labels = list(np.load(path/f'{filename}.npz', allow_pickle=True)['labels'])\n",
+    "indices_and_labels"
    ]
   },
   {
