distirbuted dataloader bug

--- a/notebooks/Creating tf_records.ipynb
+++ b/notebooks/Creating tf_records.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -90,8 +90,19 @@
      "text": [
       "<>:2: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
       "<>:2: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
-      "<ipython-input-3-87b2856da474>:2: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
+      "<ipython-input-4-87b2856da474>:2: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
       "  if config.DEVICE is 'GPU':\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m-----------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-87b2856da474>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mphysical_devices\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconfig\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlist_physical_devices\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconfig\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDEVICE\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mconfig\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDEVICE\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;34m'GPU'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconfig\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexperimental\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_memory_growth\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mphysical_devices\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0menable\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
      ]
     }
    ],
@@ -103,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,89 +268,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Files may already exist!\n",
-      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/0\n",
-      "(10003, 35) (10003, 29)\n",
-      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/1\n",
-      "(10003, 35) (10003, 29)\n",
-      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/2\n",
-      "(249, 35) (249, 29)\n",
-      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/3\n",
-      "(2508, 35) (2508, 29)\n",
-      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/4\n",
-      "(10003, 35) (10003, 29)\n",
-      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/5\n",
-      "(6551, 35) (6551, 29)\n",
-      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/6\n",
-      "(10004, 35) (10004, 29)\n",
-      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/7\n",
-      "(10003, 35) (10003, 29)\n",
-      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/8\n",
-      "(304, 35) (304, 29)\n",
-      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/9\n",
-      "(10002, 35) (10002, 29)\n",
-      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/10\n",
-      "(10003, 35) (10003, 29)\n",
-      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/11\n",
-      "(1344, 35) (1344, 29)\n",
-      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/12\n",
-      "(10001, 35) (10001, 29)\n",
-      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/13\n",
-      "(10004, 35) (10004, 29)\n",
-      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/14\n",
-      "(10004, 35) (10004, 29)\n",
-      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/15\n",
-      "(10004, 35) (10004, 29)\n",
-      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/16\n",
-      "(10003, 35) (10003, 29)\n",
-      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/17\n",
-      "(10005, 35) (10005, 29)\n",
-      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/18\n",
-      "(10003, 35) (10003, 29)\n",
-      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/19\n",
-      "(10003, 35) (10003, 29)\n",
-      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/20\n",
-      "(6451, 35) (6451, 29)\n",
-      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/21\n",
-      "(10004, 35) (10004, 29)\n",
-      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/22\n",
-      "(8431, 35) (8431, 29)\n",
-      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/23\n",
-      "(10005, 35) (10005, 29)\n",
-      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/24\n",
-      "(6076, 35) (6076, 29)\n",
-      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/25\n",
-      "(10003, 35) (10003, 29)\n",
-      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/26\n",
-      "(3370, 35) (3370, 29)\n",
-      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/27\n",
-      "(10004, 35) (10004, 29)\n",
-      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/28\n",
-      "(10004, 35) (10004, 29)\n",
-      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/29\n",
-      "(10005, 35) (10005, 29)\n",
-      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/30\n",
-      "(10003, 35) (10003, 29)\n",
-      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/31\n",
-      "(5862, 35) (5862, 29)\n",
-      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/32\n",
-      "(10003, 35) (10003, 29)\n",
-      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/33\n",
-      "(10003, 35) (10003, 29)\n",
-      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/34\n",
-      "(10003, 35) (10003, 29)\n",
-      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/35\n",
-      "(10002, 35) (10002, 29)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "paths =  TRAIN_DATA_PATHS \n",
     "# paths = [TEST_DATA_PATH] # TRAIN_DATA_PATHS # \n",
@@ -387,7 +318,7 @@
     "        it = iter(full_dataset)\n",
     "\n",
     "        # Write the records to a file. Shouldn't need to slice it up - shuffle size is large enough. to randomize\n",
-    "        with tf.io.TFRecordWriter(str(path/'tf_records/')+f\"/{num_records}.tfrecords\") as file_writer:\n",
+    "        with tf.io.TFRecordWriter(str(path/'tf_records/')+f\"/{int(demo)}.tfrecords\") as file_writer:\n",
     "            for data in it:\n",
     "                byte_stream = serialise(data)\n",
     "                file_writer.write(byte_stream)\n"
