distirbuted dataloader bug

--- a/notebooks/Creating tf_records.ipynb
+++ b/notebooks/Creating tf_records.ipynb
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +270,23 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Files may already exist!\n",
+      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/0\n",
+      "(10003, 35) (10003, 29)\n",
+      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/1\n",
+      "(10003, 35) (10003, 29)\n",
+      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/2\n",
+      "(249, 35) (249, 29)\n",
+      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/3\n",
+      "(2508, 35) (2508, 29)\n"
+     ]
+    }
+   ],
    "source": [
     "paths =  TRAIN_DATA_PATHS \n",
     "# paths = [TEST_DATA_PATH] # TRAIN_DATA_PATHS # \n",
