excl ros dep for training

--- a/notebooks/Creating tf_records.ipynb
+++ b/notebooks/Creating tf_records.ipynb
@@ -283,7 +283,19 @@
       "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/2\n",
       "(249, 35) (249, 29)\n",
       "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/3\n",
-      "(2508, 35) (2508, 29)\n"
+      "(2508, 35) (2508, 29)\n",
+      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/4\n",
+      "(10003, 35) (10003, 29)\n",
+      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/5\n",
+      "(6551, 35) (6551, 29)\n",
+      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/6\n",
+      "(10004, 35) (10004, 29)\n",
+      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/7\n",
+      "(10003, 35) (10003, 29)\n",
+      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/8\n",
+      "(304, 35) (304, 29)\n",
+      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/9\n",
+      "(10002, 35) (10002, 29)\n"
      ]
     }
    ],
