--- a/notebooks/Creating tf_records.ipynb
+++ b/notebooks/Creating tf_records.ipynb
@@ -295,7 +295,13 @@
       "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/8\n",
       "(304, 35) (304, 29)\n",
       "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/9\n",
-      "(10002, 35) (10002, 29)\n"
+      "(10002, 35) (10002, 29)\n",
+      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/10\n",
+      "(10003, 35) (10003, 29)\n",
+      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/11\n",
+      "(1344, 35) (1344, 29)\n",
+      "/catkin_ws/src/robotics/learning_from_play/data/envHz25/obs_act_etc/12\n",
+      "(10001, 35) (10001, 29)\n"
      ]
     }
    ],
